2018-03-02 Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.13.

	* README, USAGE, configure.ac: Updated for release 4.0.13.

	* Makefile.in: Add support for LDFLAGS variable (bug #1422).

2015-06-16 Till Kamppeter <till.kamppeter@gmail.com>

	* configure.ac: Allow user-configurable PERLPREFIX via environment
	  variable (Bug #1294).

2015-02-14 Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.12.

	* README, USAGE, configure.ac: Updated for release 4.0.12.

2014-11-14 Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.in: Foomatic doesn't provide some offered PPD
	  files. Thanks to Marek Kasik for the patch (bug #1238).

2014-08-22 Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in: Let missing XML files be added when to a
	  PPD with already existing XML files new "*Product:" lines get
	  added.

2014-03-20 Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.11.

	* README, USAGE, configure.ac: Updated for release 4.0.11.

	* lib/Foomatic/DB.pm: Do not interpret option default values set to
	  "0" in PPD files as no default setting defined. Thanks to Deng
	  Pang from Ricoh (DengPang at rst dot ricoh dot com) for the report.

2014-02-18 Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.10.

	* README, USAGE, configure.ac: Updated for release 4.0.10.

2014-01-02 Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-addpjloptions.in: Make foomatic-addpjloptions work with
	  the system's Foomatic database, too.

2013-03-11 Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.9.

	* README, USAGE, configure.ac: Updated for release 4.0.9.

	* lib/Foomatic/DB.pm: Error out when initializing the DB object
	  without any form of a Foomatic database being present, made
	  the getpage() method a normal, object-independent function as
	  it does not need a Foomatic database.
